WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39504
Fix MIPS JIT DoubleGreaterThanOrEqual Operands
https://bugs.webkit.org/show_bug.cgi?id=39504
Summary
Fix MIPS JIT DoubleGreaterThanOrEqual Operands
Chao-ying Fu
Reported
2010-05-21 11:35:34 PDT
There is a typo in MIPS JIT for DoubleGreaterThanOrEqual. Two operands of left and right need to be swapped. Thanks!
Attachments
Swapped two operands
(1.20 KB, patch)
2010-05-21 11:41 PDT
,
Chao-ying Fu
eric
: review-
Details
Formatted Diff
Diff
Updated ChangeLog
(1.35 KB, patch)
2010-05-21 13:07 PDT
,
Chao-ying Fu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chao-ying Fu
Comment 1
2010-05-21 11:41:28 PDT
Created
attachment 56733
[details]
Swapped two operands Here is the patch
Eric Seidel (no email)
Comment 2
2010-05-21 11:59:59 PDT
Comment on
attachment 56733
[details]
Swapped two operands Please fix the ChangeLog to mention which test this fixes. If it does not fix a test, please add one.
Chao-ying Fu
Comment 3
2010-05-21 13:07:38 PDT
Created
attachment 56739
[details]
Updated ChangeLog This patch fixed two layout tests as follows. fast/js/comparison-operators-greater.html fast/js/comparison-operators-less.html The ChangeLog is updated to mention these two patches. Thanks! Regards, Chao-ying
Chao-ying Fu
Comment 4
2010-05-21 17:52:35 PDT
Note that the two layout tests failed on MIPS after tests are added recently, I spent some time debugging them and found out that the operands are swapped incorrectly in MIPS JIT for c.nge.d instructions. Thanks!
Eric Seidel (no email)
Comment 5
2010-05-28 16:02:47 PDT
Comment on
attachment 56739
[details]
Updated ChangeLog Thank you for updating the ChagneLog. Fantastic patch now that I can clearly see what it fixes from the ChangeLog.
WebKit Commit Bot
Comment 6
2010-05-28 19:54:31 PDT
Comment on
attachment 56739
[details]
Updated ChangeLog Clearing flags on attachment: 56739 Committed
r60383
: <
http://trac.webkit.org/changeset/60383
>
WebKit Commit Bot
Comment 7
2010-05-28 19:54:36 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug