2010-05-28  Chao-ying Fu  <fu@mips.com>

Reviewed by Eric Seidel.

        Fix MIPS JIT DoubleGreaterThanOrEqual Operands
        https://bugs.webkit.org/show_bug.cgi?id=39504

        Swapped two operands of left and right for DoubleGreaterThanOrEqual.
        This patch fixed two layout tests as follows.
        fast/js/comparison-operators-greater.html
        fast/js/comparison-operators-less.html

        * assembler/MacroAssemblerMIPS.h:
        (JSC::MacroAssemblerMIPS::branchDouble):

Canonical link: https://commits.webkit.org/51426@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60383 268f45cc-cd09-0410-ab3c-d52691b4dbfc